--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -29,6 +29,7 @@ p{
 }
 
 .content{
+  margin-top: 48px;
     margin-left: auto;
     margin-right: auto;
     width: 960px;
@@ -36,7 +37,7 @@ p{
 }
 
 .form-items{
-    margin: 16px 0px;
+  margin: 16px 0px ;
     width: 50%;
     text-align: left;
     display: inline-block;
@@ -51,6 +52,17 @@ p{
     text-align: center;
 }
 .textbox{
+    width: 100%;
+    margin: 10px 0px;
+    padding:10px;
+    border: 2px solid #f3b333;
+    border-radius: 6px;
+    font-size: 1em;
+    line-height: 1.5;
+    box-sizing: border-box; 
+}
+.agebox{
+    font-family: sans-serif;
     width: 100%;
     margin: 10px 0px;
     padding:10px;
@@ -129,13 +141,14 @@ a:active {
     font-weight: bold;
     color: #f3b333;
 }
+
 /* ---------------main---------------------------- */
 
 .content-main{
     display: flex;
-    justify-content: center;
+  justify-content: center;
     align-items: center;
-    /* margin-top: 100px; */
+  /* margin-top: 100px; */
     height: 100vh;
     width: 100vw;
     flex-flow: column;
@@ -147,14 +160,7 @@ a:active {
     padding: 30px;
     width: 30%;
     text-align: center;
-    /* margin-left: auto;
-    margin-right: auto; */
 }
-/* .user-main:hover{
-    background-color: #f3b333;
-    color: #ffffff;
-    transition: all 0.2s;
-} */
 .map-main{
     border: #f3b333 solid 3px;
     font-size: 100%;
@@ -207,11 +213,6 @@ summary{
     text-decoration: none;
     transition: all 0.2s;
 }
-/* summary:hover{
-    background-color: #f3b333;
-    color: #070707;
-    transition: all 0.4s;
-} */
 details{
     border: 2px solid #f3b333;
     margin:10px auto;
@@ -365,5 +366,280 @@ details{
     color: #333;
     text-decoration: none;
     display: block;
+}
+
+/* ------------add-newarea----------- */
+.step-list {
+    display: flex;
+    padding: 60px 120px 0px;
+    gap: 4px;
+}
+
+.step-list__item {
+    margin:0 -14px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 36px;
+    padding: 0 28px;
+    flex: 1;
+    list-style: none;
+    background-color: #e0e0e0;
+    text-align: center;
+    clip-path: polygon(0% 0%, calc(100% - 28px) 0%, 100% 50%, calc(100% - 28px) 100%, 0% 100%, 28px 50% );
+}
+
+.step-list__item:first-child {
+    margin-left: 0;
+    padding-left: 0;
+    clip-path: polygon(0% 0%, calc(100% - 28px) 0%, 100% 50%, calc(100% - 28px) 100%, 0% 100% );
+}
+
+.step-list__item:last-child {
+    margin-right: 0;
+    padding-right: 0;
+    clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%, 28px 50% );
+}
+.step-list__item--current {
+    background-color:#f3b333;
+    color: #fff;
+}
+
+
+.step-text {
+    display: block;
+    font-size: 14px;
+    font-weight: bold;
+}
+.newarea-container{
+    display: flex;
+    justify-content: center;
+}
+.newarea-content{
+    width: 85%;
+    height: 450px;
+    margin: 30px;
+    /* padding: ; */
+    line-height: 450px;
+    /* border: solid 2px #999999; */
+    text-align: center;
+    background-color:#ffecc7;
+    color: #fff;
+    font-size: 48px;
+    /* font-weight:; */
+}
+
+.newarea-btn{
+    /* margin: 10px; */
+    padding: 10px;
+    text-align: center;
+}
+
+
+.deco-file{
+    text-align: center;
+    display: flex;
+    justify-content:space-evenly;
+}
+.deco-file label{
+    font-size: 16px;
+    display: inline-block;
+    background-color: #f3b333;
+    border-radius: 25px;
+    color: #fff;
+    text-align: center;
+    padding: 12px 48px;
+}
+
+.deco-file label:hover{
+    cursor: pointer;
+}
+.deco-file input[type="file"]{
+    display: none;
+}
+
+.okbtn{
+    display: inline-block;
+    font-size: 16px;
+    text-align: center;      /* 文字位置   */
+    cursor        : pointer;     /* カーソル   */
+    padding       : 12px 48px;   /* 余白       */
+    background    : #f3b333;     /* 背景色     */
+    color         : #ffffff;     /* 文字色     */
+    transition    : .3s;         /* なめらか変化 */
+    border        : 2px solid #f3b333;    /* 枠の指定 */
+    border-radius: 25px;
+}
+
+.okbtn:hover {
+  box-shadow    : none;        /* カーソル時の影消去 */
+  color         : #f3b333;     /* 背景色     */
+  background    : #ffffff;     /* 文字色     */
+}
+/* -------------add-newarea-beacon-------------------- */
+
+.beacon-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin: 60px;
+}
+.beacon-content{
+    display: inline-block;
+    margin-right: 20px;
+    border: 2px solid #f3b333;
+    color: #ffffff;
+    background-color: #f3b333;
+    padding:12px 106px;
+    border-radius: 10px;
+    text-decoration: none;
+    transition: all 0.2s;
+}
+
+.selectbox {
+    display: inline-flex;
+    align-items: center;
+    position: relative;
+    
+}
+
+.selectbox::after {
+    position: absolute;
+    right: 15px;
+    width: 10px;
+    height: 7px;
+    background-color: #f3b333;
+    clip-path: polygon(0 0, 100% 0, 50% 100%);
+    content: '';
+    pointer-events: none;
+}
+
+.selectbox select {
+    font-weight: bold;
+    appearance: none;
+    min-width: 300px;
+    height: 2.8em;
+    /* paddin: ;*/
+    border: 2px solid #f3b333;
+    border-radius: 3px;
+    background-color: #fff;
+    color: #f3b333;
+    font-size: 1em;
+    cursor: pointer;
+    text-align: center;
+}
+
+/* ----------map---------- */
+.map-container{
+    width: 80%;
+    /* padding-top: 0px;
+    padding-bottom: 10px; */
+    margin-left: auto;
+    margin-right: auto;
+    border: 2px solid #f3b333 ;
+    background-color: #ffeecb;
+    /* margin-top: 60px; */
+    /* margin-bottom: auto; */
+}
+.map-content{
+    display: flex;
+    justify-content: space-evenly;
+    margin: 40px;
+    
+}
+.map-sheet{
+    display: inline-block;
+    border: 2px solid #f3b333;
+    color: #ffffff;
+    background-color: #ffce6b;
+    padding:16px 120px;
+    text-decoration: none;
+    transition: all 0.2s;
+}
+.search-form{
+    width: 250px;
+    margin: 60px 60px 10px auto;
+    display: flex;
+    align-items: center;
+    overflow: hidden;
+    border: 1px solid #f3b333;
+    border-radius: 25px;
+    /* margin-top: 60px; */
+}
+
+.search-form input {
+    width: 250px;
+    height: 45px;
+    padding: 5px 15px 5px 0;
+    border: none;
+    box-sizing: border-box;
+    font-size: 1em;
+    outline: none;
+}
+
+.search-form input::placeholder {
+    color: #7a7a7a;
+}
+
+.search-form button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 45px;
+    height: 45px;
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+}
+
+.search-form button::before {
+    width: 24px;
+    height: 24px;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath d='M18.031 16.6168L22.3137 20.8995L20.8995 22.3137L16.6168 18.031C15.0769 19.263 13.124 20 11 20C6.032 20 2 15.968 2 11C2 6.032 6.032 2 11 2C15.968 2 20 6.032 20 11C20 13.124 19.263 15.0769 18.031 16.6168ZM16.0247 15.8748C17.2475 14.6146 18 12.8956 18 11C18 7.1325 14.8675 4 11 4C7.1325 4 4 7.1325 4 11C4 14.8675 7.1325 18 11 18C12.8956 18 14.6146 17.2475 15.8748 16.0247L16.0247 15.8748Z' fill='%23f3b333'%3E%3C/path%3E%3C/svg%3E");
+    background-repeat: no-repeat;
+    content: '';
+}
+
+/* ----------setting----------- */
+.set-content h1{
+    font-size: 24px;
+    text-align: center;
+    font-weight: bold;
+}
+
+.set-container{
+    margin-top: 64px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+}
+
+.set-container p{
+    font-weight: normal;
+}
+.set-container h2{
+    color: #f3b333;
+    font-weight: normal;
+}
+
+.set-content{
+    margin: 16px 0px ;
+    padding: 32px 0 16px;
+    width: 33%;
+    text-align: left;
+    display: inline-block; 
+}
+.set-textbox{
+    width: 100%;
+    margin: 20px 0px;
+    border: none;
+}
+
+.set{
+    margin: 48px;
+}
+.setbtn{
+    text-align: center;
 }
 
