--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,7 +9,6 @@ p{
 header{
     width: 100%;
     height: 60px;
-    position: absolute;
 }
 .nav{
     background-color: #f3b333;
@@ -172,17 +171,11 @@ a:active {
     padding: 30px;
     width: 30%;
     text-align: center;
-    display: flex;
     flex-direction: column;
+    display: flex;
     gap: 20px;
-}
-.map-data{
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    gap: 10px;
-    overflow-y: scroll;
+    /* margin-left: auto; */
+    /* margin-right: auto; */
 }
 
 .map-data{
@@ -394,7 +387,7 @@ details{
 /* ------------add-newarea----------- */
 .step-list {
     display: flex;
-    padding: 20px 120px;
+    padding: 60px 120px 0px;
     gap: 4px;
 }
 
@@ -439,16 +432,17 @@ details{
     justify-content: center;
 }
 .newarea-content{
-    width: 62%;
-    aspect-ratio: 16/9;
+    width: 85%;
+    height: 450px;
     margin: 30px;
+    /* padding: ; */
+    line-height: 450px;
+    /* border: solid 2px #999999; */
     text-align: center;
     background-color:#ffecc7;
     color: #fff;
     font-size: 48px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    /* font-weight:; */
 }
 
 .newarea-btn{
